--- a/src/main/resources/com/pooespol/proyecto_2p_poo/PedidoGenerado.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/PedidoGenerado.fxml
@@ -8,32 +8,32 @@
 
 <VBox id="AnchorPane" alignment="CENTER" prefHeight="700.0" prefWidth="1240.0" stylesheets="@../../../StylesCSS/Style_Generado.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.PedidoGeneradoController">
    <children>
-      <VBox alignment="CENTER" prefHeight="376.0" prefWidth="1240.0">
+      <VBox alignment="TOP_CENTER" prefHeight="440.0" prefWidth="1240.0">
          <children>
-            <Label fx:id="lbPedido1" alignment="CENTER" prefHeight="97.0" prefWidth="698.0" text="Tu pedido es el">
+            <Label fx:id="lbPedido1" alignment="CENTER" prefHeight="97.0" prefWidth="698.0" text="Tu pedido es el" textFill="#276087">
                <font>
-                  <Font name="Bogart Trial Bold" size="80.0" />
+                  <Font name="Bogart Trial Bold" size="90.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="-30.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="lbPedido2" alignment="CENTER" prefHeight="39.0" prefWidth="606.0" text="#4527">
+            <Label fx:id="lbPedido2" alignment="CENTER" prefHeight="39.0" prefWidth="606.0" text="#4527" textFill="#276087">
                <font>
-                  <Font name="Avenir Next Bold" size="84.0" />
+                  <Font name="Avenir Next Bold" size="90.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="-20.0" />
+                  <Insets bottom="-40.0" />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" prefHeight="87.0" prefWidth="818.0" text="Te llamaremos">
+            <Label alignment="CENTER" prefHeight="87.0" prefWidth="818.0" text="Te llamaremos" textFill="#276087">
                <font>
-                  <Font name="Bogart Trial Bold" size="53.0" />
+                  <Font name="Bogart Trial Bold" size="80.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" prefHeight="130.0" prefWidth="1121.0" text="cuando esté listo">
+            <Label alignment="CENTER" prefHeight="70.0" prefWidth="910.0" text="cuando esté listo" textFill="#276087">
                <font>
-                  <Font name="Bogart Trial Bold" size="53.0" />
+                  <Font name="Bogart Trial Bold" size="80.0" />
                </font>
                <VBox.margin>
                   <Insets top="-50.0" />
@@ -41,11 +41,11 @@
             </Label>
          </children>
       </VBox>
-      <HBox alignment="CENTER" prefHeight="120.0" prefWidth="1240.0">
+      <HBox alignment="TOP_CENTER" prefHeight="51.0" prefWidth="1240.0">
          <children>
-            <Label fx:id="lbClose" alignment="CENTER" prefHeight="55.0" prefWidth="763.0" text="Esta ventana se cerrará en 4 segundos...">
+            <Label fx:id="lbClose" alignment="CENTER" prefHeight="74.0" prefWidth="857.0" text="Esta ventana se cerrará en 4 segundos..." textFill="#276087">
                <font>
-                  <Font name="Avenir Next Bold" size="30.0" />
+                  <Font name="Avenir Next Bold" size="40.0" />
                </font>
             </Label>
          </children>
